@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl.php">ASL</license>
  <notes>
-* 
+* [jan] Don&apos;t load all shares with requested permissions from the backend if $conf[&apos;share&apos;][&apos;hidden&apos;] is enabled.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -831,7 +831,7 @@
    <date>2011-06-21</date>
    <license uri="http://www.horde.org/licenses/asl.php">ASL</license>
    <notes>
-* 
+* [jan] Don&apos;t load all shares with requested permissions from the backend if $conf[&apos;share&apos;][&apos;hidden&apos;] is enabled.
    </notes>
   </release>
  </changelog>
